# SteamProtonHelper

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOYMENT_READINESS.md  MAINTAINER_GUIDE.md  MANIFEST.in  README.md  install.sh  pyproject.toml  requirements-gui.txt  setup.py  steam-proton-helper.desktop  steam_proton_helper.py  steam_proton_helper_gui.py  test_steam_proton_helper.py
.github/workflows/: ci.yml  publish.yml
resources/: steam-proton-helper.desktop
