[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steam-proton-helper"
version = "1.0.0"
description = "A comprehensive Linux tool to help setup Steam and Proton for gaming"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "SteamProtonHelper Contributors"}
]
keywords = ["steam", "proton", "linux", "gaming", "wine", "vulkan"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment",
    "Topic :: System :: Installation/Setup",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/AreteDriver/SteamProtonHelper"
Documentation = "https://github.com/AreteDriver/SteamProtonHelper#readme"
Repository = "https://github.com/AreteDriver/SteamProtonHelper"
"Bug Tracker" = "https://github.com/AreteDriver/SteamProtonHelper/issues"

[project.scripts]
steam-proton-helper = "steam_proton_helper:main"

[tool.setuptools]
py-modules = ["steam_proton_helper"]
